<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/tab_home"
        icon="@drawable/ic_home_24dp"
        title="@string/title_tab_home" />
    <tab
        id="@+id/tab_fav_routes"
        icon="@drawable/ic_favorite_filled_24dp"
        title="@string/title_tab_fav_routes"/>
    <tab
        id="@+id/tab_buses"
        icon="@drawable/ic_bus_24dp"
        title="@string/title_tab_buses" />
    <tab
        id="@+id/tab_trains"
        icon="@drawable/ic_train_24dp"
        title="@string/title_tab_trains" />
...
