...
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/element_home_route_item"/>

</FrameLayout>

