<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="@color/md_white_1000"
    app:contentPadding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/NotificationTextStyle"
            android:id="@+id/info_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Notice something suspicious? Report it via See &amp; Say!"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/info_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="Report"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
