...
        android:id="@+id/swipe_to_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/buses_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/element_bus_route"/>

    </android.support.v4.widget.SwipeRefreshLayout>

...
